--- a/my_portfolio_mallya/src/App.css
+++ b/my_portfolio_mallya/src/App.css
@@ -5,3 +5,23 @@
   font-family: 'Encode Sans Expanded',sans-serif;
   
 }
+
+::-webkit-scrollbar {
+  width: 8px;   /* for vertical scroll bar */
+  height: 8px;   /* for horizontal scroll bar */
+}
+
+::-webkit-scrollbar-track {
+  -webkit-box-shadow: inset 0 0 6px rgba(0,0,0,0.3);
+  border-radius: 10px;
+  }
+
+::-webkit-scrollbar-track-piece {
+    background: #40E0D0;
+    /* border-radius: 5px; */
+}
+
+::-webkit-scrollbar-thumb {
+    background: #000;
+    border-radius: 5px;
+}
